# MarinePhysicsCore

./: .gitignore  CMakeLists.txt  README.md
src/: Hydrostatics.cpp  Hydrostatics.h  Integrator.cpp  Integrator.h  README.md  RigidBody.cpp  RigidBody.h  SeaState.cpp  SeaState.h  Spectrum.cpp  Spectrum.h  Wave.cpp  Wave.h  main.cpp  marine_sim  sea_elevation.csv  tempCodeRunnerFile
